optimizer/src/snapshots/spec_should_wrap_store_expression.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export default component$(() => {
	const panelStore = useStore(() => ({
		active: 'Input',
		list: PANELS,
	}));

	return (
		<div
			stuff={panelStore.active ? 'yes' : 'no'}
			class={{
				'too-long-to-wrap': true,
				'examples-panel-input': panelStore.active === 'Input',
				'examples-panel-output': panelStore.active === 'Output',
				'examples-panel-console': panelStore.active === 'Console',
			}}
		/>
	);
});
export const PANELS: ActivePanel[] = ['Examples', 'Input', 'Output', 'Console'];

============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
const _hf0 = (p0)=>p0.active ? "yes" : "no";
const _hf0_str = "p0.active?`yes`:`no`";
export const test_component_LUXeXe0DQrg = ()=>{
	const panelStore = useStore(()=>({
		active: "Input",
		list: PANELS
	}));
	return /*#__PURE__*/ _jsxSorted("div", {
		stuff: _fnSignal(_hf0, [panelStore], _hf0_str),
		class: {
			"too-long-to-wrap": true,
			"examples-panel-input": panelStore.active === "Input",
			"examples-panel-output": panelStore.active === "Output",
			"examples-panel-console": panelStore.active === "Console"
		}
	}, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    82,
    472
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_LUXeXe0DQrg = ()=>import("./test.tsx_test_component_LUXeXe0DQrg");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"));
export const PANELS = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"));


None
== DIAGNOSTICS ==

[]
