optimizer/src/snapshots/spec_support_windows_paths.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
export const Greeter = component$(() => <div/>)

============================= components\apps\apps.tsx_Greeter_component_Q7eEoxaolmI.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const Greeter_component_Q7eEoxaolmI = ()=>/*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);


None
/*
{
  "origin": "components\\apps\\apps.tsx",
  "name": "Greeter_component_Q7eEoxaolmI",
  "entry": null,
  "displayName": "components\\apps\\apps.tsx_Greeter_component",
  "hash": "Q7eEoxaolmI",
  "canonicalFilename": "components\\apps\\apps.tsx_Greeter_component_Q7eEoxaolmI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    91
  ]
}
*/
============================= components\apps\apps.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_Q7eEoxaolmI = ()=>import("./components\\apps\\apps.tsx_Greeter_component_Q7eEoxaolmI");
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_Q7eEoxaolmI, "Greeter_component_Q7eEoxaolmI"));


None
== DIAGNOSTICS ==

[]
