optimizer/src/snapshots/spec_ternary_prop.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $, useSignal } from '@qwik.dev/core';
export const Cmp = component$(() => {
	const toggleSig = useSignal(false);

	const handleClick$ = $(() => {
		toggleSig.value = !toggleSig.value;
	});

	return (
		<button onClick$={handleClick$} data-open={toggleSig.value ? true : undefined}>
			Removing data-open re-renders
		</button>
	);
});

============================= test.tsx_Cmp_component_4ryKJTOKjWE.js (ENTRY POINT)==

import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_3XP0LRiVj8c = ()=>import("./test.tsx_Cmp_component_handleClick_1_3XP0LRiVj8c");
const _hf0 = (p0)=>p0.value ? true : undefined;
const _hf0_str = "p0.value?true:undefined";
export const Cmp_component_4ryKJTOKjWE = ()=>{
	const toggleSig = useSignal(false);
	const handleClick$ = /*#__PURE__*/ qrl(i_3XP0LRiVj8c, "Cmp_component_handleClick_1_3XP0LRiVj8c", [toggleSig]);
	return /*#__PURE__*/ _jsxSorted("button", { data-open: _fnSignal(_hf0, [toggleSig], _hf0_str) }, { "on:click": handleClick$ }, "Removing data-open re-renders", 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    89,
    353
  ]
}
*/
============================= test.tsx_Cmp_component_handleClick_1_3XP0LRiVj8c.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const Cmp_component_handleClick_1_3XP0LRiVj8c = ()=>{
	const [toggleSig] = useLexicalScope();
	toggleSig.value = !toggleSig.value;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_handleClick_1_3XP0LRiVj8c",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_handleClick_1",
  "hash": "3XP0LRiVj8c",
  "canonicalFilename": "test.tsx_Cmp_component_handleClick_1_3XP0LRiVj8c",
  "path": "",
  "extension": "js",
  "parent": "handleClick",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    159,
    207
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_3XP0LRiVj8c = ()=>import("./test.tsx_Cmp_component_handleClick_1_3XP0LRiVj8c");
const i_4ryKJTOKjWE = ()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE");
export const Cmp = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_4ryKJTOKjWE, "Cmp_component_4ryKJTOKjWE"));


None
== DIAGNOSTICS ==

[]
